2011-02-28  Alan Modra  <amodra@gmail.com>

	* symbols.c (report_op_error): Remove unnecessary forward declaration.
	Add "op" parameter.  Report operator and operand segments in error
	message, not operand symbols.
	(resolve_symbol_value): Always set segment for equated symbols, not
	just when finalizing.  Adjust report_op_error calls.

2011-02-25  Alan Modra  <amodra@gmail.com>

	PR gas/12519
	* config/obj-elf.c (elf_frob_symbol): Properly handle size expression.

2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2011-01-01  H.J. Lu  <hongjiu.lu@intel.com>
	* gas.c (parse_args): Update copyright to 2011.

	2010-12-16  Maciej W. Rozycki  <macro@codesourcery.com>
	* symbols.c (symbol_clone_if_forward_ref): Call tc_new_dot_label
	for new fake labels created off the dot special symbol.
	* config/tc-mips.h (tc_new_dot_label): New macro.
	(mips_record_label): New prototype.
	* config/tc-mips.c (my_getExpression): Remove MIPS16 fake label
	annotation.
	(s_cons, s_float_cons, s_gpword, s_gpdword): Only clear labels
	recorded once data expressions have been evaluated.
	(mips_define_label): Move code to record labels over to...
	(mips_record_label): ... this new function.
	* doc/internals.texi: Document tc_new_dot_label.

	2010-12-04  Maciej W. Rozycki  <macro@codesourcery.com>
	PR gas/12282
	* expr.c (expr_build_dot): Make a clone of the symbol to return if
	needed.

	2010-12-02  Richard Sandiford  <richard.sandiford@linaro.org>
	* symbols.c (S_FORCE_RELOC): Return true for indirect functions
	even if !strict.
	* expr.c (operand): Don't convert absolute symbols to constants
	if S_FORCE_RELOC is true.
	(expr): Only reduce subtractions between different symbols if
	S_FORCE_RELOC is false for both of them.
	* write.c (fixup_segment): Don't remove symbols if S_FORCE_RELOC
	is true for them, regardless of their segment.

	2010-12-01  Maciej W. Rozycki  <macro@codesourcery.com>
	* symbols.h (dot_symbol): New declaration.
	(dot_symbol_init): New prototype.